--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.15.0",
     "bcrypt": "^6.0.0",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "mysql2": "^3.14.4",
+    "nodemailer": "^7.0.6",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.15.0",
     "reflect-metadata": "^0.2.2",
