--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ JWTSECRETKEY="your-jwt-secret-key"
 EMAILUSER="your-email@gmail.com"
 EMAILPASS="your-gmail-app-password"
 NODE_ENV="development"
+
+# Clerk Configuration
+CLERK_SECRET_KEY="your-clerk-secret-key"
+CLERK_PUBLISHABLE_KEY="your-clerk-publishable-key"
+
+# Frontend URL for CORS
+FRONTEND_URL="http://localhost:3001"
