--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,8 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# md Files
+*.md
+!README.md
+
 /generated/prisma
