--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.6",
     "@prisma/client": "^6.16.3",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.4",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
